# mean_robustness

./: .gitignore  .gitmodules  README.md  config.json  pyproject.toml  requirements.txt
mero/: README.md  dirs.py  pyproject.toml
mero/aggregators/: faba.py
mero/mero/: dirs.py
mero/mero/aggregators/: __init__.py  lfighter.py
mero/mero/metrics/: __init__.py
mero/mero/models/: __init__.py
notebooks/: README.md  feature_variance_study.ipynb  setup.ipynb
scripts/: jsons.md
scripts/first_tests/: README.md  config.json  plots_test.py  tests_train.py
scripts/first_tests/results/: config.json
scripts/peng_NN_hyperparam_tests/: README.md  plot_experiments.py  run_experiments.py
scripts/peng_NN_hyperparam_tests/results/: config.json
scripts/peng_softmax_test_poisonned_share/: README.md  config.json  run_experiments.py
scripts/peng_softmax_test_poisonned_share/results/: config.json
scripts/peng_softmax_test_poisonned_share_lr_0.001/: config.json  plot_experiments.py
scripts/replication_peng_NN/: README.md  config.json  run_experiments.py
scripts/replication_peng_softmax/: README.md  config.json  run_experiments.py
scripts/replication_peng_softmax_batch_size_1000/: config.json  plot_experiments.py  run_experiments.py
scripts/replication_peng_softmax_distribution_plots/: README.md  config.json  run_experiments.py
scripts/replication_peng_softmax_test_batchsize1000/: README.md  plots_test.py  tests_train.py
scripts/replication_peng_softmax_weight_decay_0.01/: config.json  plot_experiments.py
scripts/test_without_softmax_term/: README.md
(+6016 files in other folders)
