[project]
name = "mean-robustness"
version = "0.1.0"
description = "Mean vs. robust aggregators on distributed heterogeneous data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "byzfl>=0.0.11",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipynbname>=2025.8.0.0",
    "ipython>=9.5.0",
    "nbformat>=5.10.4",
]

[tool.uv.sources]
byzfl = { workspace = true }

[tool.uv.workspace]
members = [
  "byzfl",
  "mero",
]